<resources>
    <string name="app_name">Moku</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="playlist">Playlist</string>
    <string name="songs">Songs</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="recently_added">Recently Added</string>
</resources>
