<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.akashpanja.moku.Activity.MainActivity"
    android:isScrollContainer="true"
    android:paddingRight="12dp"
    android:paddingLeft="12dp">

    <ScrollView
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:clipToPadding="false"
            android:paddingTop="80dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:paddingBottom="10dp"
                android:id="@+id/TitleLibrary"
                android:textSize="30dp"
                android:text="Library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:gravity="left|center_vertical"
                android:textColor="#e71d6a"
                android:id="@+id/LibraryPlaylist"
                android:textSize="25dp"
                android:text="@string/playlist"
                android:background="@drawable/libray_option"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:gravity="left|center_vertical"
                android:textColor="#e71d6a"
                android:id="@+id/LibraryAlbum"
                android:textSize="25dp"
                android:text="@string/album"
                android:background="@drawable/libray_option"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:gravity="left|center_vertical"
                android:textColor="#e71d6a"
                android:id="@+id/LibraryArtist"
                android:textSize="25dp"
                android:text="@string/artist"
                android:background="@drawable/libray_option"
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <Button
                android:paddingTop="10dp"
                android:textAllCaps="false"
                android:gravity="left|center_vertical"
                android:textColor="#e71d6a"
                android:id="@+id/LibrarySongs"
                android:textSize="25dp"
                android:text="@string/songs"
                android:background="@drawable/libray_option"
                android:layout_width="match_parent"
                android:layout_height="40dp" />



            <TextView
                android:fontFamily="@font/product_sans_regular"
                android:paddingBottom="10dp"
                android:id="@+id/TitleRecentlyAdded"
                android:textSize="30dp"
                android:text="@string/recently_added"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
